--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </tr>
                 <tr>
                     <th>Product Size</th>
-                    <td>Length 19.2cm x Width 19.2cm x Height 30.5cm</td>
+                    <td>Dia 12 cm x Height 30.5cm</td>
                 </tr>
                 <tr>
                     <th>Product CBM</th>
@@ -177,15 +177,15 @@
                 </tr>
                 <tr>
                     <th>20 Ft Container Quantity</th>
-                    <td>2236.5591397849462 </td>
+                    <td>2237</td>
                 </tr>
                 <tr>
                     <th>40 Ft Container Quantity</th>
-                    <td>4817.2043010752686 </td>
+                    <td>4817 </td>
                 </tr>
                 <tr>
                     <th>40 HQ Container Quantity</th>
-                    <td>5677.4193548387093 </td>
+                    <td>5677 </td>
                  </tr>
                 <tr>
                     <th>Price</th>
@@ -208,3 +208,4 @@
     </div>
 </body>
 </html>
+
